--- a/app/src/main/res/layout/alarms_list_fragment.xml
+++ b/app/src/main/res/layout/alarms_list_fragment.xml
@@ -4,7 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AlarmsListFragment">
+    tools:context=".fragment.AlarmsListFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/alarms_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_alarm"
