--- a/app/src/main/res/layout/alarm_list_item.xml
+++ b/app/src/main/res/layout/alarm_list_item.xml
@@ -8,12 +8,12 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        app:contentPadding="6dp"
         android:layout_gravity="center"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="6dp"
-        app:cardCornerRadius="8dp">
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -23,22 +23,31 @@
                 android:id="@+id/textview_alarm_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart = "16dp"
-                android:textSize="40sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/textview_alarm_name"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="16dp"
+                android:textSize="40sp"
                 tools:text="00:00" />
 
             <TextView
                 android:id="@+id/textview_alarm_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                tools:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/textview_alarm_time"
+                app:layout_constraintStart_toStartOf="@+id/textview_alarm_time"
+                app:layout_constraintTop_toBottomOf="@+id/textview_alarm_time"
+                android:textSize='16sp'
+                tools:text="TextView" />
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/switch_activate_alarm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textview_alarm_time"
-                app:layout_constraintTop_toTopOf="@+id/textview_alarm_time" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd = "16dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
