Add edit alarm logic

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,54 @@
             android:name="isCreate"
             app:argType="boolean"
             android:defaultValue="true" />
+        <argument
+            android:name="alarmId"
+            app:argType="integer"
+            android:defaultValue="0"/>
+        <argument
+            android:name="alarmName"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="alarmHour"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="alarmMinute"
+            app:argType="integer"
+            android:defaultValue="0"/>
+        <argument
+            android:name="alarmIsRecurring"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="alarmIsMon"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="alarmIsTue"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="alarmIsWed"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="alarmIsThu"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="alarmIsFri"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="alarmIsSat"
+            app:argType="boolean"
+            android:defaultValue="false" />
+        <argument
+            android:name="alarmIsSun"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </fragment>
     <fragment
         android:id="@+id/AlarmsListFragment"
@@ -27,10 +75,6 @@
 
         <action
             android:id="@+id/action_AlarmsListFragment_to_CreateAlarmFragment"
-            app:destination="@id/CreateAlarmFragment" >
-            <argument
-                android:name="isCreate"
-                android:defaultValue="true" />
-        </action>
+            app:destination="@id/CreateAlarmFragment"/>
     </fragment>
 </navigation>
