--- a/app/src/main/res/layout/alarm_list_item.xml
+++ b/app/src/main/res/layout/alarm_list_item.xml
@@ -47,8 +47,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd = "16dp"
-                android:checked="true"/>
+                android:layout_marginEnd = "16dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
