--- a/app/src/main/res/layout/alarms_list_fragment.xml
+++ b/app/src/main/res/layout/alarms_list_fragment.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".fragment.AlarmsListFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.factor.bouncy.BouncyRecyclerView
         android:id="@+id/alarms_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </androidx.recyclerview.widget.RecyclerView>
+    </com.factor.bouncy.BouncyRecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_alarm"
